--- a/modules/guide/index.scss
+++ b/modules/guide/index.scss
@@ -1,9 +1,32 @@
+@import "~Misc/variables.scss";
+
 .guide {
   position: fixed;
-  background: #f6f6f6;
+  background: $backgroundColor;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
-  &__left {
+  &__main {
+    display: flex;
+    justify-content: space-between;
+
+    &__center {
+      justify-content: center;
+    }
+
+    &__bar {
+      background: #f00;
+    }
+
+    &__content {
+      background: #0f0;
+    }
+  }
+
+  &__bottom {
+    background: #00f;
   }
 }
