--- a/misc/variables.scss
+++ b/misc/variables.scss
@@ -1,2 +1,15 @@
 //colors
 $backgroundColor: #161616;
+$textPrimaryColor: #fafafa;
+$textSecundaryColor: #999999;
+
+$boxBackgroundColor: rgba(255, 255, 255, 0.05);
+
+//font family
+$fontText: "Roboto", sans-serif;
+
+//font size
+$inputBigSize: 48px;
+$inputMediumSize: 28px;
+$inputDefaultSize: 18px;
+$inputSmallSize: 14px;
