Adds Button component

--- a/misc/variables.scss
+++ b/misc/variables.scss
@@ -3,7 +3,7 @@ $backgroundColor: #161616;
 $textPrimaryColor: #fafafa;
 $textSecundaryColor: #999999;
 
-$boxBackgroundColor: rgba(255, 255, 255, 0.05);
+$boxBackgroundColor: #222222;
 
 //font family
 $fontText: "Roboto", sans-serif;
