Adds album list

--- a/misc/variables.scss
+++ b/misc/variables.scss
@@ -4,6 +4,7 @@ $textPrimaryColor: #fafafa;
 $textSecundaryColor: #999999;
 
 $boxBackgroundColor: #222222;
+$imageBackgroundColor: #d8d8d8;
 
 //font family
 $fontText: "Roboto", sans-serif;
