--- a/modules/formLogin/index.scss
+++ b/modules/formLogin/index.scss
@@ -14,4 +14,20 @@
   &__input {
     margin-bottom: 20px;
   }
+
+  &__orBar {
+    position: relative;
+    width: 100%;
+    margin: 20px 0;
+
+    &:before {
+      top: -9px;
+      left: 50%;
+      position: absolute;
+      content: "ou";
+      transform: translateX(-50%);
+      background: $boxBackgroundColor;
+      padding: 0 5px;
+    }
+  }
 }
