--- a/modules/guide/index.scss
+++ b/modules/guide/index.scss
@@ -12,6 +12,7 @@
   &__main {
     display: flex;
     justify-content: space-between;
+    height: 100%;
 
     &__center {
       justify-content: center;
