--- a/components/albumCover/index.scss
+++ b/components/albumCover/index.scss
@@ -12,6 +12,11 @@
     height: 350px;
     background: $imageBackgroundColor;
     margin: 0 10px;
+
+    &__item {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   &__title,
