--- a/modules/albumDetail/index.scss
+++ b/modules/albumDetail/index.scss
@@ -3,8 +3,10 @@
 .albumDetail {
   display: flex;
   flex-direction: column;
-  padding: 30px 50px 0;
+  padding: 30px 50px;
   box-sizing: border-box;
+  height: 100%;
+  overflow: auto;
 
   &__top {
   }
@@ -20,6 +22,8 @@
 
     &__trackList {
       flex: 2;
+      overflow: auto;
+      padding-bottom: 50px;
     }
   }
 }
