--- a/components/playerButton/index.scss
+++ b/components/playerButton/index.scss
@@ -7,6 +7,7 @@
   color: $textSecundaryColor;
   cursor: pointer;
 
+  &__pause,
   &__play {
     border: 1px solid $textSecundaryColor;
     padding: 15px;
