--- a/modules/bar/index.scss
+++ b/modules/bar/index.scss
@@ -1,5 +1,37 @@
 @import "~Misc/variables.scss";
 
 .bar {
+  width: 100%;
+  height: 100%;
   color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 10px;
+  justify-content: space-between;
+  box-sizing: border-box;
+
+  &__img {
+    width: 100%;
+
+    &__item {
+      width: 100%;
+    }
+  }
+
+  &__button {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    background: none;
+    color: $textPrimaryColor;
+    border: none;
+    font-size: 30px;
+    cursor: pointer;
+
+    &__text {
+      font-family: $fontText;
+      font-size: 14px;
+    }
+  }
 }
